--- a/render.yaml
+++ b/render.yaml
@@ -18,4 +18,4 @@ services:
         fromService:
           type: web
           name: titanic-backend
-          property: url
+          property: host
