Fix backend URL schema

--- a/render.yaml
+++ b/render.yaml
@@ -16,8 +16,10 @@ services:
     buildCommand: "pip install -r requirements.txt"
     startCommand: "streamlit run frontend/app.py --server.port 10000 --server.address 0.0.0.0"
     envVars:
-      - key: BACKEND_URL
+      - key: BACKEND_HOST
         fromService:
           type: web
           name: titanic-backend
           property: host
+      - key: BACKEND_URL
+        value: https://${BACKEND_HOST}
