--- a/render.yaml
+++ b/render.yaml
@@ -17,7 +17,4 @@ services:
     startCommand: "streamlit run frontend/app.py --server.port 10000 --server.address 0.0.0.0"
     envVars:
       - key: BACKEND_URL
-        fromService:
-          type: web
-          name: titanic-backend
-          property: url
+        value: "https://titanic-backend-msvi.onrender.com"
